--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "bugs": {
     "url": "https://github.com/Abhishek2025-cpu/Uradio-Backend/issues"
   },
-
   "license": "ISC",
   "author": "AbhishekPearl",
   "type": "commonjs",
@@ -18,6 +17,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
