--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 MONGO_URI=mongodb+srv://abhisheks:ijgha3sbMNK0Hfsu@cluster0.ul6vz.mongodb.net/Uradio?retryWrites=true&w=majority&appName=Cluster0
+FTP_HOST=ftp.yourserver.com
+FTP_USER=ftpuser
+FTP_PASS=P@ssw0rd2022
+BASE_URL=https://podcast.youradio.ma
+PORT=3000
