--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ MONGO_URI=mongodb+srv://abhisheks:ijgha3sbMNK0Hfsu@cluster0.ul6vz.mongodb.net/Ur
 FTP_HOST=ftp.yourserver.com
 FTP_USER=ftpuser
 FTP_PASS=P@ssw0rd2022
+FTP_HOST=207.180.223.158
 BASE_URL=https://podcast.youradio.ma
 PORT=3000
