--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "http": "^0.0.1-security",
     "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
