--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ FTP_PASS=P@ssw0rd2022
 FTP_HOST=207.180.223.158
 BASE_URL=https://podcast.youradio.ma
 PORT=3000
+CLOUDINARY_CLOUD_NAME=dvumlrxml
+CLOUDINARY_API_KEY=437932967899129
+CLOUDINARY_API_SECRET=Pg4zI1EW8iCdotG29P4jcHFAW4s
+
