--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ FTP_HOST=ftp.yourserver.com
 FTP_USER=ftpuser
 FTP_PASS=P@ssw0rd2022
 FTP_HOST=207.180.223.158
-BASE_URL=https://podcast.youradio.ma
+BASE_URL=https://v2.uradio.ma
+
 PORT=3000
 CLOUDINARY_CLOUD_NAME=dvumlrxml
 CLOUDINARY_API_KEY=437932967899129
