--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://abhisheks:ijgha3sbMNK0Hfsu@cluster0.ul6vz.mongodb.net/Uradio?retryWrites=true&w=majority&appName=Cluster0
-FTP_HOST=207.180.223.158
+FTP_HOST=ftp.yourserver.com
 FTP_USER=ftpuser
 FTP_PASS=P@ssw0rd2022
 
