--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.1.1",
+    "node-fetch": "^2.7.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
