--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1"
   }
